--- a/book-wrapup/src/Components/TopFiveBooks.css
+++ b/book-wrapup/src/Components/TopFiveBooks.css
@@ -1,5 +1,6 @@
 .TopFiveBooksSection {
-    background-color: #ffc0cb;
+    background-color: white;
+    border: solid #00634d 0.5em;
     display: flex;
     flex-direction: row;
     padding-top: 10%;
