--- a/book-wrapup/src/Components/Input.scss
+++ b/book-wrapup/src/Components/Input.scss
@@ -53,3 +53,21 @@ input {
       }
     }
   }
+
+  .bookOptionsSection {
+    margin-top: 5%;
+    display: flex; 
+    flex-direction: column;
+    flex-wrap: wrap;
+    list-style: none;
+  }
+
+  li {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  img { 
+    width: 10%;
+  }
